<resources>
    <string name="app_name">BloodDonationHospitalApp</string>
    <string name="hello_world">Hello World</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="button_login">Log In</string>
    <string name="fullName">Full Name</string>
    <string name="gender">Gender</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="address">Address</string>
    <string name="bloodType">Blood Type</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


    <string name="register">Register as Donor</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="new_user">Want to donate?Register Now</string>
    <string name="register_donor">Registration Donor Account</string>
    <string name="dateOfBirth">Date of Birth</string>
    <string name="blood_group">Blood Group</string>
    <string-array name="blood_groups">
        <item>A+</item>
        <item>O+</item>
        <item>B+</item>
        <item>AB+</item>
        <item>A-</item>
        <item>O-</item>
        <item>B-</item>
        <item>AB-</item>
    </string-array>
</resources>