<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/registrationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentDonorRegistration">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/fullName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/labelDateOfBirth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/dateOfBirth"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextFullName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextFullName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFullName" />

    <TextView
        android:id="@+id/labelBloodGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/blood_group"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/birthDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/birthDate"
        app:layout_constraintTop_toBottomOf="@+id/birthDate" />

    <EditText
        android:id="@+id/birthDate"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="@+id/labelDateOfBirth"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/labelDateOfBirth"
        app:layout_constraintTop_toBottomOf="@+id/labelDateOfBirth"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/radUserType"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/textViewGender"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewGender"
        app:layout_constraintTop_toBottomOf="@+id/textViewGender">

        <RadioButton
            android:id="@+id/radioButtonMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/male"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="86dp"
            tools:layout_editor_absoluteY="350dp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            tools:ignore="TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="209dp"
            tools:layout_editor_absoluteY="350dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/gender"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:entries="@array/blood_groups"
        app:layout_constraintEnd_toEndOf="@+id/labelBloodGroup"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/labelBloodGroup"
        app:layout_constraintTop_toBottomOf="@+id/labelBloodGroup" />

    <TextView
        android:id="@+id/labelAddress"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/address"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/radUserType"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radUserType"
        app:layout_constraintTop_toBottomOf="@+id/radUserType" />

    <EditText
        android:id="@+id/homeAddress"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="@+id/labelAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/labelAddress"
        app:layout_constraintTop_toBottomOf="@+id/labelAddress" />

    <TextView
        android:id="@+id/textPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneNumber"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/homeAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/homeAddress"
        app:layout_constraintTop_toBottomOf="@+id/homeAddress" />

    <EditText
        android:id="@+id/editTextPhone2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="@+id/textPhoneNumber"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textPhoneNumber"
        app:layout_constraintTop_toBottomOf="@+id/textPhoneNumber" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextPhone2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextPhone2"
        app:layout_constraintTop_toBottomOf="@+id/editTextPhone2" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/labelEmail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/labelEmail"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail" />

    <TextView
        android:id="@+id/labelPasswords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/password"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextEmailAddress"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/labelPasswords"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/labelPasswords"
        app:layout_constraintTop_toBottomOf="@+id/labelPasswords" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/editTextTextPassword2"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="109dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.257"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>